# gdvm

./: .assetsignore  .dockerignore  .editorconfig  .gitignore  .prototools  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile.e2e  LICENCE  MIGRATION.md  README.md  REUSE.toml  create-index.mjs  renovate.json  rust-toolchain.toml  rustfmt.toml  wrangler.toml
.cargo/: config.toml
.github/workflows/: build-and-test.yml  build-target.yml  cleanup-artifacts.yml  codeql.yml  e2e-target.yml  gdvm-v1-validate.yml  main.yml  pr.yml  publish-site.yml  release.yml  sign-macos-target.yml  sign-target.yml  sign-windows-target.yml  update-registry-v1.yml  update-registry-v2.yml  v1-validate.yml  v2-validate.yml
LICENSES/: LicenseRef-trademarked.txt
crates/gdvm/: Cargo.toml  build.rs
crates/gdvm/i18n/: en-US.ftl  fr-FR.ftl  hy-AM.ftl  nb-NO.ftl  nn-NO.ftl  ru-RU.ftl
crates/gdvm/src/: artifact_cache.rs  config.rs  date_utils.rs  download_utils.rs  error.rs  fs_utils.rs  gdvm_toml.rs  godot_manager.rs  hash_utils.rs  host.rs  i18n.rs  lib.rs  locks.rs  main.rs  metadata_cache.rs  migrations.rs  paths.rs  post_upgrade.rs  process_utils.rs  progress_utils.rs  project_version_detector.rs  registry.rs  registry_store.rs  registry_version_resolver.rs  releases.rs  run_version_resolver.rs  self_update.rs  shims.rs  usage_tracker.rs  version_resolver.rs  version_utils.rs  zip_utils.rs
crates/gdvm/src/app/: catalog.rs  defaults.rs  installer.rs  launcher.rs  library.rs  mod.rs  pruner.rs  updater.rs
crates/gdvm/src/cli/: args.rs  cache.rs  completions.rs  config.rs  diagnose.rs  format.rs  info.rs  install.rs  link.rs  list.rs  mod.rs  pin.rs  prune.rs  registry.rs  remove.rs  request.rs  run.rs  search.rs  show.rs  upgrade.rs  use_cmd.rs
crates/gdvm/src/registry/: mod.rs  publish.rs  v2.rs
crates/gdvm/src/ui/: mod.rs  progress.rs  theme.rs
crates/gdvm/src/version/: mod.rs  query.rs  resolved.rs  selection.rs  spec.rs  variant.rs
crates/gdvm/tests/: config.rs  download_resume.rs  first_run.rs  godot_interaction.rs  paths.rs  pin.rs  prune.rs  registry.rs  version_detection.rs
crates/gdvm/tests/common/: mod.rs
crates/shim/: Cargo.toml
crates/shim/src/: main.rs
docs/: debuggers.md
gdvm/v1/: README.md  lib.mts  package-lock.json  package.json  releases.json  update-gdvm-releases.mts  validate.mts
gh-pages/: .gitignore  index.html  install.ps1  install.sh  package.json  release-content.json  tsconfig.json  vite.config.ts
gh-pages/public/: site.webmanifest
gh-pages/src/components/: Callout.module.css  Callout.tsx  CommandBox.module.css  CommandBox.tsx  InstallTabs.module.css  InstallTabs.tsx  Toast.module.css  Toast.tsx
gh-pages/src/content/: release.tsx
gh-pages/src/layouts/: Layout.tsx
gh-pages/src/pages/: +config.ts  Head.tsx
gh-pages/src/pages/index/: +Page.tsx  Page.module.css
gh-pages/src/styles/: global.css
i18n/: en-US.ftl  hy-AM.ftl  nb-NO.ftl  nn-NO.ftl  ru-RU.ftl
scripts/: cut-release.ps1  find-missing-i18n.ps1  find-missing-i18n.sh  get-release-description.ps1  install.ps1  install.sh  lint-i18n.ps1  lint-i18n.sh  run-e2e-docker.ps1  run-e2e-docker.sh  run-e2e-linux.sh  run-e2e.sh  sort-i18n.ps1  sort-i18n.sh
src/: config.rs  download_utils.rs  godot_manager.rs  i18n.rs  lib.rs  main.rs  project_version_detector.rs  version_utils.rs  zip_utils.rs
tests/: config.rs  godot_interaction.rs
v1/: .editorconfig  README.md  build-repo.mjs  generate-commit-msg.mjs  index.json  package.json  update-registry.mjs  validate.mjs
v1/releases/: 120826894_1.0-stable.json  120826898_1.1-stable.json  120826900_2.0-stable.json  120826903_2.0.1-stable.json  120826909_2.0.2-stable.json  120826912_2.0.3-stable.json  120826916_2.0.4.1-stable.json  120826921_2.1-stable.json  120826925_2.1.1-stable.json  120826927_2.1.2-stable.json  120826929_2.1.3-stable.json  120826935_2.1.4-stable.json  120826936_3.0-stable.json  120826940_3.0.1-stable.json  120826941_3.0.2-stable.json  120826943_3.0.3-rc1.json  120826945_3.0.3-rc2.json  120826949_3.0.3-rc3.json  120826953_3.0.3-stable.json  120826960_3.0.4-stable.json  120826964_3.0.5-stable.json  120826970_2.1.5-stable.json  120826973_3.0.6-stable.json  120826976_3.1-alpha1.json  120826980_3.1-alpha2.json  120826987_3.1-alpha3.json  120826990_3.1-alpha4.json  120826994_3.1-alpha5.json  120826998_3.1-beta1.json  120827000_3.1-beta2.json  120827003_3.1-beta3.json  120827008_3.1-beta4.json  120827011_3.1-beta5.json  120827013_3.1-beta6.json  120827018_3.1-beta7.json  120827020_3.1-beta8.json  120827022_3.1-beta9.json  120827026_3.1-beta10.json  120827031_3.1-beta11.json  120827033_3.1-rc1.json  (+308 more)
v2/: .state.json  README.md  generate-commit-msg.mts  index.json  lib.mts  package-lock.json  package.json  registry.json  tsconfig.json  update-registry.mts  validate.mts
v2/releases/: 1.0-stable.json  1.1-stable.json  2.0-stable.json  2.0.1-stable.json  2.0.2-stable.json  2.0.3-stable.json  2.0.4.1-stable.json  2.1-stable.json  2.1.1-stable.json  2.1.2-stable.json  2.1.3-stable.json  2.1.4-stable.json  2.1.5-stable.json  2.1.6-rc1.json  2.1.6-stable.json  3.0-stable.json  3.0.1-stable.json  3.0.2-stable.json  3.0.3-rc1.json  3.0.3-rc2.json  3.0.3-rc3.json  3.0.3-stable.json  3.0.4-stable.json  3.0.5-stable.json  3.0.6-stable.json  3.1-alpha1.json  3.1-alpha2.json  3.1-alpha3.json  3.1-alpha4.json  3.1-alpha5.json  3.1-beta1.json  3.1-beta10.json  3.1-beta11.json  3.1-beta2.json  3.1-beta3.json  3.1-beta4.json  3.1-beta5.json  3.1-beta6.json  3.1-beta7.json  3.1-beta8.json  (+307 more)
