[package]
name = "gdvm"
version = "0.3.1"
edition = "2021"
description = "Godot Version Manager"
license = "ISC"
repository = "https://github.com/adalinesimonian/gdvm"

[dependencies]

# For command-line argument parsing:
clap = { version = "4.5.23", features = ["derive"] }
regex = "1.11.1"

# For cross-platform paths:
directories = "5.0.1"

# For i18n:
fluent-bundle = "0.15.3"
fluent-langneg = "0.14.1"
unic-langid = { version = "0.9.5", features = ["unic-langid-macros"] }
anyhow = "1.0.95"

# For downloading files:
reqwest = { version = "0.12.9", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "rustls-tls",
    "blocking",
] }
futures-io = "0.3.31"
indicatif = "0.17.9"
sha2 = "0.10.8"
serde_json = "1.0.134"
serde = { version = "1.0.216", features = ["derive"] }
semver = "1.0.24"

# For file system operations:
zip = "2.2.2"

# For starting Godot:
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winbase"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
daemonize = "0.5.0"

# OpenSSL for cross-compiling:
[target.i686-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.68", features = ["vendored"] }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.68", features = ["vendored"] }
