[package]
name = "gdvm"
version = "0.11.0"
edition = "2024"
build = "build.rs"
description = "Godot Version Manager"
license = "ISC"
repository = "https://github.com/adalinesimonian/gdvm"

[dependencies]

# For command-line argument parsing:
clap = { version = "=4.5.53", features = ["derive", "wrap_help"] }
regex = "=1.12.2"

# For cross-platform paths:
directories = "=6.0.0"

# For i18n:
fluent-bundle = "=0.16.0"
fluent-langneg = "=0.14.2"
unic-langid = { version = "=0.9.6", features = ["unic-langid-macros"] }
anyhow = "=1.0.100"
terminal_size = "=0.4.3"
textwrap = { version = "=0.16.2", features = [
    "unicode-width",
    "unicode-linebreak",
] }

# For downloading files:
reqwest = { version = "=0.13.1", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "rustls",
    "blocking",
] }
futures-io = "=0.3.31"
indicatif = "=0.18.3"
sha2 = "=0.10.9"
serde_json = "=1.0.148"
serde = { version = "=1.0.228", features = ["derive"] }
semver = "=1.0.27"

# For file system operations:
zip = "=7.0.0"
toml = "0.9.0"
rpassword = "7.3.1"

# For starting Godot:
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "=0.3.9", features = ["winbase"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
daemonize = "=0.5.0"

[dev-dependencies]
tempfile = "3.20.0"
serial_test = "3.2.0"

[features]
integration-tests = []
