# SPDX-FileCopyrightText: Copyright (C) 2024 Adaline Simonian
# SPDX-License-Identifier: GPL-3.0-or-later
#
# This file is part of gdvm.
#
# gdvm is free software: you can redistribute it and/or modify it under the
# terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later
# version.
#
# gdvm is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
# A PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with
# this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "gdvm"
version = "0.13.0"
edition = "2024"
build = "build.rs"
description = "Godot Version Manager"
license = "GPL-3.0-or-later"
repository = "https://github.com/adalinesimonian/gdvm"

[dependencies]

# For command-line argument parsing:
clap = { version = "=4.6.1", features = ["wrap_help"] }

# For cross-platform paths:
directories = "=6.0.0"

# For i18n:
fluent-bundle = "=0.16.0"
unic-langid = { version = "=0.9.6", features = ["unic-langid-macros"] }
anyhow = "=1.0.103"
terminal_size = "=0.4.4"

# For downloading files:
reqwest = { version = "=0.13.4", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "rustls",
    "stream",
] }
indicatif = { version = "=0.18.6", features = ["improved_unicode"] }
sha2 = "=0.11.0"
digest-io = "=0.1.0"
serde_json = "=1.0.150"
serde = { version = "=1.0.228", features = ["derive"] }
semver = "=1.0.28"
tokio = { version = "=1.52.3", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "time",
] }
async-trait = "=0.1.89"
futures-util = "=0.3.32"

# For file system operations:
zip = "=8.6.0"
toml = "=1.1.2"
rpassword = "=7.5.4"
dotenvy = "=0.15.7"

# For timestamps:
jiff = "=0.2.31"

# For starting Godot:
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "=0.3.9", features = ["winbase"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
daemonize = "=0.5.0"

[dev-dependencies]
tempfile = "=3.27.0"
serial_test = "=3.5.0"
zip = "=8.6.0"

[features]
integration-tests = []
